--- a/frontend/src/components/ui/search-input.module.css
+++ b/frontend/src/components/ui/search-input.module.css
@@ -25,7 +25,7 @@
 }
 
 .input {
-  padding-right: 2rem;
+  padding-right: calc(2rem + var(--icon-slot-size));
   width: 100%;
 }
 
